[package]
authors = ["OKP4"]
description = "Discord bot to bridge the Dataverse!"
edition = "2021"
license-file = "LICENSE"
name = "discord_bot"
readme = "README.md"
repository = "https://github.com/okp4/discord-bot"
rust-version = "1.65"
version = "0.1.0"

[dependencies]
abscissa_core = { version = "0.7.0" }
abscissa_tokio = { version = "0.7.0", features = ["actix"] }
actix = "0.13"
actix-rt = "2.2"
bip39 = "1"
clap = { version = "4", features = ["derive"] }
cosmos-sdk-proto = "0.14.0"
cosmrs = { version = "0.11.0" }
hyper = "0.14.24"
metrics = { version = "^0.20" }
metrics-exporter-prometheus = { version = "0.11.0", default-features = false, features = [
  "http-listener",
] }
prost = "0.11.7"
prost-types = "0.11.8"
serde = { version = "1", features = ["serde_derive"] }
serenity = { version = "0.11", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "=1.0.38"
tokio = { version = "1.25", features = ["time", "macros", "tracing"] }
tonic = { version = "0.8.3", features = ["tls-webpki-roots"] }
tracing = { version = "0.1.37", features = ["log"] }
uritemplate = "0.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
metrics-process-promstyle = "0.18.0"

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.17"

[build-dependencies]
prost-build = "0.11.6"
prost-wkt-build = "0.4"
tonic-build = "0.8.4"
